--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                 </p>
             </div>
             <div class="footer-socialMedia">
-                <a href="www.facebook.com"></a>
-                <a href="www.instagram.com"></a>
+                <a href="www.facebook.com">Facebook</a>
+                <a href="www.instagram.com">Instagram</a>
             </div>
         </div>
     </div>
