--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="./styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -72,11 +73,10 @@
                     <p>"</p>
                 </div>
                 <div id="section-description">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel, nulla? Laborum, veniam est tempora
-                        fugit temporibus voluptates dolores tenetur animi cum unde quod facere velit necessitatibus
-                        excepturi libero illo voluptate? Sequi aut pariatur in perspiciatis velit, aliquid possimus rem
-                        commodi debitis ipsum, iusto soluta aliquam quod placeat, eos quo ratione voluptates! Sequi,
-                        voluptas atque aliquam eligendi a voluptatem facilis aliquid.</p>
+                    <p> Turtle Hill Farm is a family owned and operated business in the city of Woodruff, South Carolina.
+                        This testimony to the symbiosis between humanity and nature was founded in YEAR by Edward Williams, Patricia Williams, and their youngest son Ian. 
+                        We emphasize an organic approach to cultivating land. All of our crops are grown pestiside free and non-GMO.
+                        Stop by and we will show you have to rejoin nature in a way that is non-invasive to the Earth.</p>
                 </div>
             </div>
         </div>
@@ -92,7 +92,8 @@
                     <P>"</P>
                 </div>
                 <div id="section-description">
-                    <p>You will be serviced.</p>
+                    <p>We provide a variety of services for clients. We have heavy earth moving equipment for rental. Please CONTACT US for
+                         a quote on bringing equipment to your property for whatever job you need.</p>
                 </div> 
             </div>
 
@@ -109,7 +110,9 @@
                     <p>"</p>
                 </div>
                 <div id="section-description">
-                    <p>Education is important for youngsters.</p>
+                    <p>The future of humanity is invested in the next generation. We are always happy to help guide new farmers into
+                         this lifestyle. Please feel free to bring children of all ages to this family-friendly environment.
+                    </p>
                 </div> 
             </div>
 
