--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="./styles.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -27,14 +27,7 @@
 
         </div>
         <div class="section">
-            <div id="section-image">
-                <img src=""
-                     alt=""
-                     class="section-imageFullSize">
-                <div id="section-image_caption">
-
-                </div>
-            </div>
+            
             <div id="section-image">
                 <img src=""
                      alt="teenage-chicken"
@@ -54,16 +47,24 @@
                         Laborum, tempora tenetur similique fuga error, laboriosam magnam cumque delectus autem, iusto
                         eaque ullam. </p>
                 </div>
+               
             </div>
-        </div>
-        <div class="section">
-            <div id="section-image">
+             <div id="section-image">
                 <img src=""
                      alt="G O A T"
                      id="section-imageFullSize">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore quod accusamus minima nemo? Laborum,
                     tempora tenetur similique fuga error, laboriosam magnam cumque delectus autem, iusto eaque ullam.
                 </p>
+            </div>
+        </div>
+        <div class="section">
+            <div id="section-image">
+                <img src="./pictures/Photography/DSCN1893.JPG"
+                     alt="">
+                <div id="section-image_caption">
+
+                </div>
             </div>
             <div id="section-words">
                 <div id="section-title">
@@ -80,7 +81,7 @@
                 </div>
             </div>
         </div>
-        <div class="section">
+        <div class="section" style="flex-direction: row-reverse;">
             <div id="section-image">
                 <img src="./pictures/Photography/DSCN1902.JPG">
             </div>
@@ -124,8 +125,8 @@
                 </p>
             </div>
             <div class="footer-socialMedia">
-                <a href="www.facebook.com">Facebook</a>
-                <a href="www.instagram.com">Instagram</a>
+                <a href="https://www.facebook.com">Facebook</a>
+                <a href="https://www.instagram.com">Instagram</a>
             </div>
         </div>
     </div>
