--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <ul>
                     <li>About</li>
                     <li>Services</li>
-                    <li>Avalibiliy</li>
-                    <li>Eduction</li>
+                    <li>Availability</li>
+                    <li>Education</li>
                 </ul>
             </div>
 
@@ -29,42 +29,37 @@
         <div class="section">
             
             <div id="section-image">
-                <img src=""
+                <img src="./pictures/Photography/DSCN1949.JPG"
                      alt="teenage-chicken"
                      id="section-imageFullSize">
                 <div id="section-image_caption">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore quod accusamus minima nemo?
-                        Laborum, tempora tenetur similique fuga error, laboriosam magnam cumque delectus autem, iusto
-                        eaque ullam. </p>
+                    <p>Test Test Test </p>
                 </div>
             </div>
             <div id="section-image">
-                <img src=""
-                     alt="ugly-kids-on-hayride"
+                <img src="./pictures/Photography/DSCN1895.JPG"
+                     alt="herd-of-goats"
                      id="section-imageFullSize">
                 <div id="section-image_caption">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore quod accusamus minima nemo?
-                        Laborum, tempora tenetur similique fuga error, laboriosam magnam cumque delectus autem, iusto
-                        eaque ullam. </p>
+                    <p>Our herd of goats and their kids. </p>
                 </div>
                
             </div>
              <div id="section-image">
-                <img src=""
-                     alt="G O A T"
-                     id="section-imageFullSize">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore quod accusamus minima nemo? Laborum,
-                    tempora tenetur similique fuga error, laboriosam magnam cumque delectus autem, iusto eaque ullam.
+                <img src="./pictures/Photography/DSCN1981.JPG"
+                     alt="Edward under an oak."
+                     id="section-imageFullSize"
+                     >
+                     <div id="section-image_caption">    
+                <p>The farm spans 41 acres, most of it trees and untamed land.
                 </p>
+                </div>
             </div>
         </div>
         <div class="section">
             <div id="section-image">
                 <img src="./pictures/Photography/DSCN1893.JPG"
                      alt="">
-                <div id="section-image_caption">
-
-                </div>
             </div>
             <div id="section-words">
                 <div id="section-title">
@@ -83,7 +78,7 @@
         </div>
         <div class="section" style="flex-direction: row-reverse;">
             <div id="section-image">
-                <img src="./pictures/Photography/DSCN1902.JPG">
+                <img src="./pictures/Photography/DSCN1995.JPG">
             </div>
             <div id="section-words">
                 <div id="section-title">
@@ -101,7 +96,7 @@
         </div>
         <div class="section">
             <div id="section-image">
-                <img src="./pictures/Photography/DSCN1892.JPG">
+                <img src="./pictures/Photography/DSCN1966.JPG">
             </div>
             <div id="section-words">
                 <div id="section-title">
@@ -121,11 +116,14 @@
         <div class="footer">
             <div class="footer-copywrite">
                 <p>
-                    Turtle Hill Farms
+                    &copy; Turtle Hill Farms
                 </p>
             </div>
             <div class="footer-socialMedia">
-                <a href="https://www.facebook.com">Facebook</a>
+                <a style="width: 50px; height: 50px; box-shadow: none;" class="footer-socailMedia_icon" href="https://www.facebook.com">
+                <img src="./pictures/Icons/social-facebook-box-blue-icon.png"
+                alt="Facebook">
+                 </a>
                 <a href="https://www.instagram.com">Instagram</a>
             </div>
         </div>
