--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
         </div>
         <div class="section">
             <div id="section-image">
-                <img src="./pictures/Photography/DSCN1893.JPG"
+                <img src="./pictures/Icons/acejrerc4.gif"
+                    style="box-shadow: none;"
                      alt="">
             </div>
             <div id="section-words">
@@ -115,16 +116,30 @@
         </div>
         <div class="footer">
             <div class="footer-copywrite">
-                <p>
+                <p style="margin: 0;
+                position: relative;
+                top: 50%;
+                -ms-transform: translateY(-50%);
+                transform: translateY(-50%);">
                     &copy; Turtle Hill Farms
                 </p>
             </div>
             <div class="footer-socialMedia">
                 <a style="width: 50px; height: 50px; box-shadow: none;" class="footer-socailMedia_icon" href="https://www.facebook.com">
-                <img src="./pictures/Icons/social-facebook-box-blue-icon.png"
+                <img style = "box-shadow: none; margin: 0;
+                position: relative;
+                top: 50%;
+                -ms-transform: translateY(-50%);
+                transform: translateY(-50%);" src="./pictures/Icons/social-facebook-box-blue-icon.png"
                 alt="Facebook">
                  </a>
-                <a href="https://www.instagram.com">Instagram</a>
+                <a style="width: 50px; height: 50px; box-shadow: none;" class="footer-socailMedia_icon" href="https://www.instagram.com">
+                <img style = "box-shadow: none; margin: 0;
+                position: relative;
+                top: 50%;
+                -ms-transform: translateY(-50%);
+                transform: translateY(-50%);" src="./pictures/Icons/1491580635-yumminkysocialmedia26_83102.png" alt="Instagram">
+                </a>
             </div>
         </div>
     </div>
