--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <p>"</p>
                 </div>
                 <div id="section-description">
-                    <p>The future of humanity is invested in the next generation. We are always happy to help guide new farmers into
+                    <p>The future of humanity is dependant on the next generation. We are always happy to help guide new farmers, young and old, into
                          this lifestyle. Please feel free to bring children of all ages to this family-friendly environment.
                     </p>
                 </div> 
