--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-
+<div id="clipShape1"></div>
+<div id="clipShape2"></div>
     <div class="main">
         <div class="navigationBar">
             <div id="navigationBar-logo">
