Added Website to Host

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Turtle Hill Farms</title>
     <link href="styles.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&family=Roboto&display=swap" rel="stylesheet"> 
 </head>
 
 <body>
@@ -15,7 +17,7 @@
     <div class="main">
         <div class="navigationBar">
             <div id="navigationBar-logo">
-
+                <img style="box-shadow: none; border-radius: 0px;" src="./pictures/Icons/Logo.svg">
             </div>
             <div id="navigationBar-links">
                 <ul>
@@ -30,37 +32,42 @@
         <div class="section">
             
             <div id="section-image">
-                <img src="./pictures/Photography/DSCN1949.JPG"
-                     alt="teenage-chicken"
-                     id="section-imageFullSize">
-                <div id="section-image_caption">
-                    <p>Test Test Test </p>
+                <div id="section-image_imageWrapper">
+                    <img src="./pictures/Photography/DSCN1949.JPG"
+                        alt="teenage-chicken"
+                        id="section-imageFullSize">
+                    <div id="section-image_caption">
+                        <p>Paths to discovery.</p>
+                    </div>
                 </div>
             </div>
             <div id="section-image">
+                <div id="section-image_imageWrapper">
                 <img src="./pictures/Photography/DSCN1895.JPG"
                      alt="herd-of-goats"
                      id="section-imageFullSize">
                 <div id="section-image_caption">
                     <p>Our herd of goats and their kids. </p>
                 </div>
-               
+            </div>
             </div>
              <div id="section-image">
+                <div id="section-image_imageWrapper">
                 <img src="./pictures/Photography/DSCN1981.JPG"
                      alt="Edward under an oak."
                      id="section-imageFullSize"
                      >
                      <div id="section-image_caption">    
-                <p>The farm spans 41 acres, most of it trees and untamed land.
+                <p>Fourty one acres, most of it trees and untamed land.
                 </p>
                 </div>
+            </div>
             </div>
         </div>
         <div class="section">
             <div id="section-image">
                 <img src="./pictures/Icons/acejrerc4.gif"
-                    style="box-shadow: none;"
+                    style="box-shadow: none; padding-top: 10px;"
                      alt="">
             </div>
             <div id="section-words">
@@ -80,7 +87,7 @@
         </div>
         <div class="section" style="flex-direction: row-reverse;">
             <div id="section-image">
-                <img src="./pictures/Photography/DSCN1995.JPG">
+                <img class="section-image_fullSize" src="./pictures/Photography/DSCN1995.JPG">
             </div>
             <div id="section-words">
                 <div id="section-title">
@@ -98,7 +105,7 @@
         </div>
         <div class="section">
             <div id="section-image">
-                <img src="./pictures/Photography/DSCN1966.JPG">
+                <img class="section-image_fullSize" src="./pictures/Photography/DSCN1966.JPG">
             </div>
             <div id="section-words">
                 <div id="section-title">
@@ -108,8 +115,8 @@
                     <p>"</p>
                 </div>
                 <div id="section-description">
-                    <p>The future of humanity is dependant on the next generation. We are always happy to help guide new farmers, young and old, into
-                         this lifestyle. Please feel free to bring children of all ages to this family-friendly environment.
+                    <p>The children are the future of Humanity so teach the children well <br>
+                        And as their teacher your knowledge of Life and Nature to them you ought to tell <br><br> -Fancis Duggan
                     </p>
                 </div> 
             </div>
