--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
     <div class="main">
         <div class="navigationBar">
             <div id="navigationBar-logo">
-                <img style="box-shadow: none; border-radius: 0px;" src="./pictures/Icons/Logo.svg">
+                <a href="./index.html"><img style="box-shadow: none; border-radius: 0px;" src="./pictures/Icons/Logo.svg"></a>
             </div>
             <div id="navigationBar-links">
+                <a id="navicon" href="#"><img id="navicon" style="box-shadow: none;" src="./pictures/Icons/tf_navicon.png" alt="" /></a>
                 <ul>
-                    <li>About</li>
-                    <li>Services</li>
-                    <li>Availability</li>
-                    <li>Education</li>
+                    <li><a class="navigationBar-links" href="./building.html">About</a></li>
+                    <li><a class="navigationBar-links" href="./building.html">Services</a></li>
+                    <li><a class="navigationBar-links" href="./building.html">Availability</a></li>
+                    <li><a class="navigationBar-links" href="./building.html">Education</a></li>
                 </ul>
             </div>
 
@@ -85,7 +86,7 @@
                 </div>
             </div>
         </div>
-        <div class="section" style="flex-direction: row-reverse;">
+        <div id="servicesSection">
             <div id="section-image">
                 <img class="section-image_fullSize" src="./pictures/Photography/DSCN1995.JPG">
             </div>
